# Guidelines

./: .clang-format  CMakeLists.txt  README.md  sonar-project.properties
.github/: hooks
.github/workflows/: python-package.yaml
design/: plantuml_demo.pmu
development_process/: process.md
src/cpp/: main.cpp
src/python/: factorial.py
tests/: test_factorial.py
